@@ -2,6 +2,8 @@
 
 2.6.0.0 (current development version)
 	* New solver flag: '--reject-unconstrained-dependencies'. (#2568)
+	* Add the following option aliases for '-dir'-suffixed options:
+	  'storedir', 'logsdir', 'packagedir', 'sourcedir', 'outputdir' (#5484).
 
 2.4.0.0
 	* 'new-run' now allows the user to run scripts that use a special block
